force-app/main/default/objects/QuoteLineItem/fields/Include_In_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Include_In_Bundle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include In Bundle</label>
    <type>Checkbox</type>
</CustomField>