force-app/main/default/objects/QuoteLineItem/fields/Invoice_Table_Order__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Table_Order__c</fullName>
    <label>Invoice Table Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>