force-app/main/default/objects/QuoteLineItem/fields/Total_Approved_Customer_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Approved_Customer_Discount__c</fullName>
    <label>Total Approved Customer Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>